@@ -143,6 +143,7 @@ int _dessert_cli_cmd_show_tokenbucket(struct cli_def* cli, char* command, char* 
 int _dessert_cli_cmd_tokenbucket_policy(struct cli_def* cli, char* command, char* argv[], int argc);
 int _dessert_cli_cmd_tokenbucket_max(struct cli_def* cli, char* command, char* argv[], int argc);
 int _dessert_cmd_print_tasks(struct cli_def* cli, char* command, char* argv[], int argc);
+int _dessert_cli_cmd_showuptime(struct cli_def* cli, char* command, char* argv[], int argc);
 int _dessert_closeLogFile();
 
 /******************************************************************************
